objects/JunoDoc__Junodoc_Batch_Settings__c/JunoDoc__Junodoc_Batch_Settings__c.object-meta.xml
<CustomObject>
    <label>Junodoc Batch</label>
    <nameField>
        <label>Junodoc Batch Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>