objects/JunoDoc__Junodoc_Batch_Settings__c/fields/JunoDoc__Junodoc_Batch__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Batch</label>
    <referenceTo>JunoDoc__Junodoc_Batch__c</referenceTo>
    <relationshipLabel>Junodoc Batch</relationshipLabel>
    <relationshipName>Junodoc_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>