objects/JunoDoc__Junodoc_Batch_Settings__c/fields/JunoDoc__Junodoc_Templates__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Templates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Templates</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JunoDoc__Doc_Template__c.JunoDoc__Show_Templates__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JunoDoc__Doc_Template__c</referenceTo>
    <relationshipLabel>Junodoc Batch</relationshipLabel>
    <relationshipName>Junodoc_Batch_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>