objects/JunoDoc__Junodoc_Batch_Settings__c/fields/JunoDoc__Report_ID__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Report_ID__c</fullName>
    <label>Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>