objects/JunoDoc__Junodoc_Batch_Settings__c/fields/JunoDoc__SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__SOQL_Query__c</fullName>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>